# protocol

./: .env.example  .flake8  .gitignore  .safety-project.ini  CI_CD_GUIDE.md  CLAUDE.md  LICENSE  README.md  main.py  pipeline_config.yaml  pyproject.toml  requirements.txt  test_requirements.txt
.claude/: settings.local.json
.github/workflows/: README.md  SEMANTIC_RELEASE.md  ci.yml  codeql.yml  dependency-review.yml  release.yml  semantic-release.yml
flipchart_ocr_pipeline/: main.py
flipchart_ocr_pipeline/pipeline/: builder.py  config.py  file_loader.py  monitor.py  worker.py
flipchart_ocr_pipeline/tasks/: image_optimization.py  nvidia_ocr_provider.py  ocr.py  save_pdf.py  task_item.py
pipeline/: __init__.py  builder.py  config.py  file_loader.py  monitor.py  worker.py
tasks/: __init__.py  exceptions.py  image_optimization.py  nvidia_ocr_provider.py  ocr.py  ocr_provider.py  registry.py  save_pdf.py  task_item.py
tests/: README.md  __init__.py  test_file_loader.py  test_image_optimization.py  test_main.py  test_monitor.py  test_nvidia_ocr_provider.py  test_ocr_provider.py  test_ocr_tasks.py  test_pipeline_builder.py  test_registry.py  test_save_pdf.py  test_save_pdf_missing_lines.py  test_task_processor.py  test_worker.py
