[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "flipchart_ocr_pipeline"
version = "1.0.0"
description = "Flipchart OCR pipeline with SOLID principles"
readme = "README.md"
authors = [
    { name = "bumbleflies UG", email = "info@bumbleflies.com" }
]
license = "MIT"
requires-python = ">=3.11,<=3.14"

dependencies = [
    "numpy>=2.2.0,<3.0.0",
    "opencv-python>=4.12.0,<5.0.0",
    "opencv-python-headless>=4.12.0,<5.0.0; sys_platform != 'win32'",
    "Pillow>=12.0.0,<13.0.0",
    "pypdf>=6.1.3,<7.0.0",
    "requests>=2.32.5,<3.0.0",
    "rich>=14.1.0,<15.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "PyYAML>=6.0.2,<7.0.0",
]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=1.2.0",
]
check = [
    "flake8>=7.1.0",
    "black>=25.9.0",
    "mypy>=1.18.2",
    "bandit (>=1.8.6,<2.0.0)",
]
commit = [
    "pre-commit>=4.0.0",
    "python-semantic-release>=9.15.2"

]
dev = [
    { include-group = "test" },
    { include-group = "check" },
    { include-group = "commit" },
    "types-requests>=2.32.4",
    "types-PyYAML>=6.0.12",
]

[project.urls]
homepage = "https://github.com/bumbleflies/protocol"
repository = "https://github.com/bumbleflies/protocol"
documentation = "https://github.com/bumbleflies/protocol/blob/main/README.md"
issues = "https://github.com/bumbleflies/protocol/issues"

[project.scripts]
main = "flipchart_ocr_pipeline:main"

[tool.black]
line-length = 120
target-version = ["py312", "py313", "py314"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=flipchart_ocr_pipeline",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
[tool.coverage.run]
relative_files = true
source = ["flipchart_ocr_pipeline"]
omit = ["*/tests/*", "*/test_*.py", "*/__init__.py", ]
[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "if __name__ == .__main__.:", "raise AssertionError", "raise NotImplementedError", "if TYPE_CHECKING:", "@abstractmethod", ]
precision = 2
show_missing = true
skip_covered = false

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
build_command = "poetry build"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = true

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^Merge ",
    "^\\[skip ci\\]",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build", "chore", "ci", "docs", "feat", "fix",
    "perf", "style", "refactor", "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
